src/objects/SuMo_Job_Courses__c.object
<CustomObject>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBS_Job_Profile__c</fullName>
        <label>PBS Job Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Demand Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand &amp; Supply Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repack Planner/Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply / Requirements Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Planning Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Planning Manager (MSO/MCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repack Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S&amp;OP Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand &amp; Supply Planning Manager (MSO/MCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Innovation Planning Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Supply Planning Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Planning Manager Product Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning Director (MSO/MCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category / Brand SC Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning Director Product Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Title__c</fullName>
        <label>Training Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_hours__c</fullName>
        <label>Training Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>Curriculum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Full Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SuMo_Job_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SuMo Job Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JC{00000000}</displayFormat>
        <label>SuMo Job Courses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuMo Job Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>